--- a/src/styles/ToneRules.scss
+++ b/src/styles/ToneRules.scss
@@ -63,7 +63,7 @@
     }
     td {
         font-size: 1.5em;
-        font-weight: lighter;
+        font-weight: 500;
     }
     .drill {
         position: fixed;
@@ -84,7 +84,7 @@
     .drill-buttons {
         h3 {
             font-size: 1.2em;
-            font-weight: lighter;
+            font-weight: 500;
             height: 1em;
         }
         h4 {
