--- a/src/styles/ConsonantSounds.scss
+++ b/src/styles/ConsonantSounds.scss
@@ -38,12 +38,12 @@
 
             h3 {
                 font-size: 3rem;
-                font-weight: normal;
+                font-weight: 400;
                 margin-bottom: 1em;
             }
             p {
                 font-size: 2rem;
-                font-weight: lighter;
+                font-weight: 300;
             }
         }
     }
