--- a/src/styles/Hint.scss
+++ b/src/styles/Hint.scss
@@ -67,7 +67,7 @@
     h2 {
         text-align: left;
         font-size: 1.5em;
-        font-weight: lighter;
+        font-weight: 500;
         color: constants.$color-primary-0;
     }
 
