--- a/src/styles/WordsTable.scss
+++ b/src/styles/WordsTable.scss
@@ -21,7 +21,7 @@
         }
 
         th {
-            font-weight: lighter;
+            font-weight: 500;
             font-size: 1.1em;
             text-align: left;
         }
